# crimson_like

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  crimson.sln  crimson.vcxproj  crimson.vcxproj.filters
UT/: CMakeLists.txt  Crimson_UT.cpp
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: BulletSpawner.h  Bullets.h  CheckCollision.h  CollisionBox.h  Drawable.h  Enemy.h  EnemyAI.h  EnemySpawner.h  GraphicSystem.h  GraphicsSystem.h  InputHandler.h  InputLogic.h  Orientation.h  Player.h  Position.h  SDL_Tools.h  Terrain.h  Texture.h  TextureManager.h  Timer.h
media/: bg.png:Zone.Identifier  map.txt
src/: BulletSpawner.cpp  Bullets.cpp  CheckCollision.cpp  Drawable.cpp  Enemy.cpp  EnemyAI.cpp  EnemySpawner.cpp  GraphicSystem.cpp  GraphicsSystem.cpp  InputHandler.cpp  InputLogic.cpp  Player.cpp  SDL_Tools.cpp  Terrain.cpp  Texture.cpp  TextureManager.cpp  Timer.cpp  gl3w.c  main.cpp
